<resources>
    <string name="app_name">Sistema Unificado de Saúde</string>
    <string name="welcome_text">Bem-vindo(a) ao Sistema Unificado de Saúde</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="title_register_patients">Cadastrar Pacientes</string>
    <string name="title_consult_patients">Consultar Pacientes</string>
    <string name="title_register_medications">Cadastrar Medicamentos</string>
    <string name="title_manage_medications">Gerenciar Medicamentos</string>
    <string name="manage_medications_col1">Nome</string>
    <string name="manage_medications_col2">Princípio</string>
    <string name="manage_medications_col3">Ingestão</string>
    <string name="manage_medications_col4">Fabricante</string>
    <string name="click_to_update">* Clique na linha que deseja editar.</string>
    <string-array name="default_person_search_entries">
        <item>CPF</item>
        <item>E-mail</item>
        <item>ID</item>
    </string-array>
    <string name="person_name">Nome: %1$s</string>
    <string name="person_birth_date">Data de Nascimento: %1$s</string>
    <string name="person_email">E-mail: %1$s</string>
    <string name="person_phone">Telefone: %1$s</string>
    <string name="person_blood_type">Tipo Sanguíneo: %1$s</string>
    <string name="person_medical_conditions">Condições Médicas: %1$s</string>
    <string name="person_allergies">Alergias: %1$s</string>
    <string name="person_comments">Observações: %1$s</string>
</resources>