<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ManageMedicationsActivity">

    <TableLayout
        android:id="@+id/manageMedicationsTable"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow android:background="@color/redStiletto">

            <TextView
                android:id="@+id/nameHeader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="4"
                android:ellipsize="end"
                android:padding="10sp"
                android:singleLine="true"
                android:text="@string/manage_medications_col1"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="4"
                android:ellipsize="end"
                android:padding="10sp"
                android:singleLine="true"
                android:text="@string/manage_medications_col2"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="4"
                android:ellipsize="end"
                android:padding="10sp"
                android:singleLine="true"
                android:text="@string/manage_medications_col3"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="14sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_weight="4"
                android:ellipsize="end"
                android:padding="10sp"
                android:singleLine="true"
                android:text="@string/manage_medications_col4"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:textSize="14sp" />
        </TableRow>

    </TableLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/click_to_update"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/manageMedicationsTable" />

</androidx.constraintlayout.widget.ConstraintLayout>